~scrollbar profile menu shift fix; main container min widht of 800px; +cursor: alias for all new tab links

--- a/react/src/Components/Layout/AsideContainer.module.scss
+++ b/react/src/Components/Layout/AsideContainer.module.scss
@@ -1,5 +1,4 @@
 .asideContainer {
-  padding: 1rem 0;
-  scrollbar-gutter: stable both-edges;
+  padding: 1rem 1rem;
   overflow: auto;
 }
