--- a/react/src/index.scss
+++ b/react/src/index.scss
@@ -8,7 +8,10 @@
     background-color: var(--tertiarty);
     color: var(--primary);
     font-family: 'Rubik', sans-serif;
+    overflow: hidden auto !important;
+    padding: 0 !important;
 }
+
 
 body {
     opacity: 0;
@@ -65,7 +68,7 @@ body {
     
     &:has(> :nth-child(3):last-child) {
         display: grid;
-        grid-template-columns: 12fr 29rem;
+        grid-template-columns: minmax(800px, 12fr) 29rem;
     }
 
     &:has(> .loader) {
@@ -100,4 +103,8 @@ body {
     100% {
         translate: 0;
     }
+}
+
+a[target="_blank"] {
+    cursor: alias;
 }
